--- a/26. Remove Duplicates from Sorted Array.md
+++ b/26. Remove Duplicates from Sorted Array.md
@@ -9,12 +9,9 @@ int removeDuplicates(int* nums, int numsSize) {
     for(int i=0;i<numsSize-duplicates_sum;i++){
         
         for(int j=i+1;j<numsSize-duplicates_sum;j++){
-            if(nums[i] == nums[j]){
-                move++;
-            }
-            else
-            
-            
+         if(nums[i] == nums[j]){
+             move++;
+         }
         }
         
         if(move > 0){
@@ -31,3 +28,37 @@ int removeDuplicates(int* nums, int numsSize) {
 }
 ```
 
+在输入量大时超出了时间限制，核心是找出相同的值，思想是：利用两个指针i和j，j逐个去找和i不同的值，找到一个就记录i后面的数要往前移动1格，于是找到连续的n个与i相同的值，就意味着后面的数**从不同的值开始**向前移动n个数，而且，每移动了一次之后，i就指向下一个数i+1，j重新寻找与i+1不同的值，但是，搜寻的范围就应该比前一次缩小了n格(如果前一次确实找到了n个相同的数)，直到i指向了最后一个元素结束（这个最后的元素是指未移动时的最后一个元素值，并不是当前数组的最后一个元素，因为这个数组的元素一直在往前移动），那么移动的次数就等于所有元素拥有相同个数的总和
+
+这个思路运行时间久是因为嵌套了循环，时间复杂度是T(n^2),主要原因是没有利用这个输入是一个已经排序好的数组，而上面这个思路没有针对这一点，而是遍历i后面所有元素与他相同的元素，这样的话，即使这个数组是没有排序的，那么也能进行操作
+
+时间复杂度T(n^2)
+
+空间复杂度O(1)
+
+
+
+other answer
+
+```
+int removeDuplicates(int* nums, int numsSize) {
+    if(numsSize == 0)
+        return 0;
+    int i = 0;
+    for(int j=i+1;j<numsSize;j++){
+        if(nums[i] != nums[j]){
+            i++;
+            nums[i] = nums[j];
+        }
+    }
+    return i + 1;    
+}
+```
+
+这个答案速度快，核心是找出不同的值，结果是数组前n个数为互相不同的数，他的思想是：当前的数组已经排列好了，于是就利用了两个指针i和j，j比i跑得快一点，去找出与i不一样的值X，当j找到X的时候，就把i下一个值修改为X，当j找到下一个不同的值Y时，那么就将X下一值改为Y，如此一来，直到j指向了最后一个元素并完成判断工作，j在这个过程中总共找到了n个值，那么就有n个互相不同的值挨在一起，这前n个值就是我们想要的，而前n个数后面的值就不需要的了。
+
+这个思路针对了输入数组已排序的特点，只要从i开始找到了一个不一样的值，那么就可以直接将i+1进行替换了，无需将后面的元素整体移动
+
+时间复杂度是T(n)
+
+空间复杂度是O(1)
